# vStream

./: CMakeLists.txt  README.md
scripts/: clang-format.sh  license-add.sh  runGcov.sh
src/: CMakeLists.txt  pch.h  vStreamStatic.cpp
src/encoder/: CMakeLists.txt  audioEncoder.cpp  audioEncoder.h  encoder.cpp  encoder.h  videoEncoder.cpp  videoEncoder.h
src/main/: CMakeLists.txt  main.cpp
src/muxer/: CMakeLists.txt  muxer.cpp  muxer.h
